# config-files

./: .vimrc
code-templ/: CMakeLists-CPP  main.cpp
code-templ/cpp_templ/: CMakeLists.txt  Makefile  main.cpp
code-templ/cpp_templ/include/: facto.hpp
code-templ/cpp_templ/lib/display/: display.cpp  display.hpp
code-templ/cpp_templ/src/: facto.cpp
code-templ/cpp_templ2/: CMakeLists.txt  Makefile
code-templ/cpp_templ2/main/: main.cpp
code-templ/cpp_templ2/main/include/: add.hpp
code-templ/cpp_templ2/test/: tstmain.cpp
code-templ/cpp_templ3/: CMakeLists.txt  Makefile  gitignore  main.cpp
editors/nvim/: init.vim
editors/nvim/lua/tuks/: dap.lua  dspui.lua  gitsigns.lua  init.lua  jdtls.lua  lspconfig.lua  lualine.lua  luasnip.lua  nvim-cmp.lua  theme.lua  toggle-term.lua  treesitter.lua
editors/qt-creator/: dark_copy.xml  intellij_copy.xml
editors/vim/: .vimrc
editors/vim/.vim/: .netrwhist
git/: .gitconfig
kitty/: kitty.conf
old/: .gitconfig  .vimrc
old/nvim/: init.vim
shells/bash/: .bashrc
shells/zsh/: .zshrc
shells/zsh/.oh-my-zsh/: tags
shells/zsh/.oh-my-zsh/themes/: tuksv1.zsh-theme
terminals/kitty/: kitty.conf  kitty.conf.bak
winman/i3/: config
zsh-omz/: .zshrc
